Fixing input and button css on mobile screens

--- a/app/client/src/components/NewTodoForm/NewTodoForm.css
+++ b/app/client/src/components/NewTodoForm/NewTodoForm.css
@@ -37,7 +37,8 @@
 
 @media (min-width: 320px) {
     .todo-input {
-        width: 75%;
+        width: calc(75% - 10px);
+        margin-right: 10px;
     }
 
     .new-todo-button {
@@ -48,7 +49,8 @@
 
 @media (min-width: 768px) {
     .todo-input {
-        width: 85%;
+        width: calc(85% - 10px);
+        margin-right: 10px;
     }
 
     .new-todo-button {
